# vector-lite

./: .gitignore  CMakeLists.txt  README.md
include/: Vector.hpp
src/: Vector.cpp
unit_tests/: CMakeLists.txt  vector_unit_tests.cpp
